# hackmate-finder

./: .gitignore  README.md
client/: .env  .gitignore  package-lock.json  package.json  pnpm-lock.yaml
client/src/: App.tsx  index.css  main.tsx  router.tsx
client/src/components/: LoadingFallback.tsx  ProtectedRoute.tsx  footer.tsx  header.tsx  matchTile.tsx  notification.tsx
client/src/context/: AuthContext.tsx
client/src/pages/: Hero.tsx  HomePage.tsx  Login.tsx  OAuthCallback.tsx  SignUp.tsx  auth.tsx  home.tsx  matchesSearch.tsx
server/: pixi.toml  pyproject.toml
