[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "motor>=3.7.0",
    "numpy>=2.2.4",
    "passlib[bcrypt]>=1.7.4",
    "pydantic[email]>=2.11.3",
    "pyjwt>=2.10.1",
    "scikit-learn>=1.6.1",
    "sentence-transformers>=4.0.2",
    "uvicorn>=0.34.0",
]
